--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
     
     <div id="aboutPg-section-main">
         <div class="aboutPg-card">
-            <h1>About Us</h1>
+            <h1>ABOUT US</h1>
             <p>With over 29 years of experience, Live Oak Dog Obedience is an established local business operating in LA 
                 and San Bernardio County since 1982. Live Oak Dog Obedience offers year-round dog training classes, and 
                 Private In Home Lessons, Trick Classes, in City of Rancho Cucamonga, City of Upland, City of Claremont and
@@ -125,7 +125,7 @@
         </div>
     </div>
     <div id="aboutPg-testimonials">
-        <h1>Testimonials</h1>
+        <h1>TESTIMONIALS</h1>
         <div class="testimonial">
             <p>"Live Oak Dog Obedience owner Maya, has such a reputation that everyone talks about!"</p>
             <p class="quoteName">Pat</p>
