--- a/index.html
+++ b/index.html
@@ -379,21 +379,21 @@
 	<div class="section-classes">
 		<div class="grid-classes">
 			<!-- <div id="grid-firstCol"></div> -->
-			<a href="#"><div><div class="grid-classes-icon" alt="dog icon"></div>Puppy&nbspPre&nbspSchool & Socialization</div></a>
-			<a href="#"><div><div class="grid-classes-icon" alt="dog icon"></div>Beginning Novice</div></a>
-			<a href="#"><div><div class="grid-classes-icon" alt="dog icon"></div>Intermediate</div></a>
-			<a href="#"><div><div class="grid-classes-icon" alt="dog icon"></div>Tricks for Dogs</div></a>
-			<a href="#"><div><div class="grid-classes-icon" alt="dog icon"></div>Advanced</div></a>
-			<a href="#"><div><div class="grid-classes-icon" alt="dog icon"></div>Clicker Training</div></a>
-			<a href="#"><div><div class="grid-classes-icon" alt="dog icon"></div>Flyball</div></a>
-			<a href="#"><div><div class="grid-classes-icon" alt="dog icon"></div>Social Graces</div></a>
-			<a href="#"><div><div class="grid-classes-icon" alt="dog icon"></div>Canine Good Citizenship Testing (CGC)</div></a>
-			<a href="#"><div><div class="grid-classes-icon" alt="dog icon"></div>Open Obedience</div></a>
-			<a href="#"><div><div class="grid-classes-icon" alt="dog icon"></div>Annual Canine Fun Day</div></a>
-			<a href="#"><div><div class="grid-classes-icon" alt="dog icon"></div>Ask The Behaviorist/Trainer Workshop</div></a>
+			<a href="classes.html"><div><div class="grid-classes-icon" alt="dog icon"></div>Puppy&nbspPre&nbspSchool & Socialization</div></a>
+			<a href="classes.html"><div><div class="grid-classes-icon" alt="dog icon"></div>Beginning Novice</div></a>
+			<a href="classes.html"><div><div class="grid-classes-icon" alt="dog icon"></div>Intermediate</div></a>
+			<a href="classes.html"><div><div class="grid-classes-icon" alt="dog icon"></div>Tricks for Dogs</div></a>
+			<a href="classes.html"><div><div class="grid-classes-icon" alt="dog icon"></div>Advanced</div></a>
+			<a href="classes.html"><div><div class="grid-classes-icon" alt="dog icon"></div>Clicker Training</div></a>
+			<a href="classes.html"><div><div class="grid-classes-icon" alt="dog icon"></div>Flyball</div></a>
+			<a href="classes.html"><div><div class="grid-classes-icon" alt="dog icon"></div>Social Graces</div></a>
+			<a href="classes.html"><div><div class="grid-classes-icon" alt="dog icon"></div>Canine Good Citizenship Testing (CGC)</div></a>
+			<a href="classes.html"><div><div class="grid-classes-icon" alt="dog icon"></div>Open Obedience</div></a>
+			<a href="classes.html"><div><div class="grid-classes-icon" alt="dog icon"></div>Annual Canine Fun Day</div></a>
+			<a href="classes.html"><div><div class="grid-classes-icon" alt="dog icon"></div>Ask The Behaviorist/Trainer Workshop</div></a>
 			<!-- <div id="grid-lastCol"></div> -->
 		</div>
-		<a class="button" href="#classes">Classes & Events</a>
+		<a class="button" href="classes.html">Classes & Events</a>
 	</div>
 
 	<div class="section-welcomed">
@@ -413,7 +413,7 @@
 				<span class="quote">"</span> 
 			</h4>
 			<h4 id="quote-name">Pat</h4>
-			<a class="button" href="#about">About Us</a>
+			<a class="button" href="about.html">About Us</a>
 		</div>
 		<!-- <img src="images/doberman_pinscher-cutout-v8-leaves-bright.png"> -->
 	</div>
@@ -422,7 +422,7 @@
 	</div>
 
 	<div class="section-schedule">
-		<a class="button" href="#schedule">Schedule</a>
+		<a class="button" href="schedule.html">Schedule</a>
 		<div id="calendar"></div>
 	</div>
 
